Checkstyle based parser